# name: test_create[uvloop]
  <class 'dict'> {
    'count': None,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 1,
      'name': 'palm.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': None,
    'id': 'abc123',
    'job': None,
    'linked_samples': <class 'list'> [
    ],
    'name': 'Calamus',
    'nickname': 'Rim Palm',
    'ready': False,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: test_create[uvloop][job]
  <class 'dict'> {
    '_id': 'bf1b993c',
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'files': <class 'list'> [
        <class 'dict'> {
          'id': 1,
          'name': 'palm.fa.gz',
        },
      ],
      'subtraction_id': 'abc123',
    },
    'key': None,
    'ping': None,
    'rights': <class 'dict'> {
    },
    'space': <class 'dict'> {
      'id': 0,
    },
    'state': 'waiting',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflow': 'create_subtraction',
  }
---
# name: test_edit[uvloop-False-False-data0]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-False-False-data0].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
  }
---
# name: test_edit[uvloop-False-False-data1]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-False-False-data1].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
  }
---
# name: test_edit[uvloop-False-False-data2]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-False-False-data2].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
  }
---
# name: test_edit[uvloop-False-False-data3]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-False-False-data3].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
  }
---
# name: test_edit[uvloop-False-True-data0]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data0].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data1]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data1].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data2]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data2].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data3]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': None,
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-False-True-data3].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-False-data0]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-True-False-data0].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
  }
---
# name: test_edit[uvloop-True-False-data1]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-True-False-data1].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
  }
---
# name: test_edit[uvloop-True-False-data2]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-True-False-data2].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
  }
---
# name: test_edit[uvloop-True-False-data3]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  }
---
# name: test_edit[uvloop-True-False-data3].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
  }
---
# name: test_edit[uvloop-True-True-data0]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data0].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data1]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data1].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data2]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data2].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data3]
  <class 'dict'> {
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
    ],
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'id': 'apple',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
      <class 'dict'> {
        'id': '12',
        'name': 'Sample 12',
      },
      <class 'dict'> {
        'id': '22',
        'name': 'Sample 22',
      },
    ],
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_edit[uvloop-True-True-data3].1
  <class 'dict'> {
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_finalize_subtraction[uvloop-None]
  <class 'dict'> {
    'count': 100,
    'created_at': '2015-10-06T20:00:00Z',
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/subtractions/foo/files/subtraction.fq.gz',
        'id': 1,
        'name': 'subtraction.fq.gz',
        'size': 12345,
        'subtraction': 'foo',
        'type': 'fasta',
      },
      <class 'dict'> {
        'download_url': '/subtractions/foo/files/subtraction.1.bt2',
        'id': 2,
        'name': 'subtraction.1.bt2',
        'size': 56437,
        'subtraction': 'foo',
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/subtractions/foo/files/subtraction.2.bt2',
        'id': 3,
        'name': 'subtraction.2.bt2',
        'size': 93845,
        'subtraction': 'foo',
        'type': 'bowtie2',
      },
    ],
    'gc': <class 'dict'> {
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    },
    'id': 'foo',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'jobs_pathoscope_bowtie',
    },
    'linked_samples': <class 'list'> [
    ],
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_finalize_subtraction[uvloop-None].1
  <class 'dict'> {
    '_id': 'foo',
    'count': 100,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'gc': <class 'dict'> {
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    },
    'job': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': True,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_find[uvloop]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': <class 'dict'> {
          'id': 642,
          'name': 'Apis_mellifera.0.fa.gz',
        },
        'id': 'id_0',
        'job': <class 'dict'> {
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'stage': None,
          'state': 'waiting',
          'user': <class 'dict'> {
            'administrator': False,
            'handle': 'leeashley',
            'id': 'bf1b993c',
          },
          'workflow': 'jobs_pathoscope_bowtie',
        },
        'name': 'Test 0',
        'nickname': '',
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': <class 'dict'> {
          'id': 642,
          'name': 'Apis_mellifera.1.fa.gz',
        },
        'id': 'id_1',
        'job': <class 'dict'> {
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'stage': None,
          'state': 'waiting',
          'user': <class 'dict'> {
            'administrator': False,
            'handle': 'leeashley',
            'id': 'bf1b993c',
          },
          'workflow': 'jobs_pathoscope_bowtie',
        },
        'name': 'Test 1',
        'nickname': '',
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': <class 'dict'> {
          'id': 642,
          'name': 'Apis_mellifera.2.fa.gz',
        },
        'id': 'id_2',
        'job': <class 'dict'> {
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'stage': None,
          'state': 'waiting',
          'user': <class 'dict'> {
            'administrator': False,
            'handle': 'leeashley',
            'id': 'bf1b993c',
          },
          'workflow': 'jobs_pathoscope_bowtie',
        },
        'name': 'Test 2',
        'nickname': '',
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': <class 'dict'> {
          'id': 642,
          'name': 'Apis_mellifera.3.fa.gz',
        },
        'id': 'id_3',
        'job': <class 'dict'> {
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'stage': None,
          'state': 'waiting',
          'user': <class 'dict'> {
            'administrator': False,
            'handle': 'leeashley',
            'id': 'bf1b993c',
          },
          'workflow': 'jobs_pathoscope_bowtie',
        },
        'name': 'Test 3',
        'nickname': '',
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': <class 'dict'> {
          'id': 642,
          'name': 'Apis_mellifera.4.fa.gz',
        },
        'id': 'id_4',
        'job': <class 'dict'> {
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'stage': None,
          'state': 'waiting',
          'user': <class 'dict'> {
            'administrator': False,
            'handle': 'leeashley',
            'id': 'bf1b993c',
          },
          'workflow': 'jobs_pathoscope_bowtie',
        },
        'name': 'Test 4',
        'nickname': '',
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'ready_count': 5,
    'total_count': 5,
  }
---
# name: test_get_from_job[uvloop]
  <class 'dict'> {
    'count': None,
    'created_at': '2016-09-19T00:12:04Z',
    'file': <class 'dict'> {
      'id': 1,
      'name': 'fake.fa.gz',
    },
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/subtractions/2x6YnyMt/files/subtraction.fq.gz',
        'id': 1,
        'name': 'subtraction.fq.gz',
        'size': 12345,
        'subtraction': '2x6YnyMt',
        'type': 'fasta',
      },
      <class 'dict'> {
        'download_url': '/subtractions/2x6YnyMt/files/subtraction.1.bt2',
        'id': 2,
        'name': 'subtraction.1.bt2',
        'size': 56437,
        'subtraction': '2x6YnyMt',
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/subtractions/2x6YnyMt/files/subtraction.2.bt2',
        'id': 3,
        'name': 'subtraction.2.bt2',
        'size': 93845,
        'subtraction': '2x6YnyMt',
        'type': 'bowtie2',
      },
    ],
    'gc': None,
    'id': '2x6YnyMt',
    'job': None,
    'linked_samples': <class 'list'> [
    ],
    'name': 'tree',
    'nickname': 'near',
    'ready': False,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
  }
---
# name: test_job_remove[uvloop-True-False]
  <class 'dict'> {
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'deleted': True,
    'file': <class 'dict'> {
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    },
    'job': <class 'dict'> {
      'job': 'fb085f7f',
    },
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': False,
    'user': <class 'dict'> {
      'id': 'bf1b993c',
    },
  }
---
# name: test_job_remove[uvloop-True-False].1
  <class 'dict'> {
    '_id': 'test',
    'name': 'Test',
    'subtractions': <class 'list'> [
    ],
  }
---
# name: test_upload[uvloop-404]
  <class 'dict'> {
    'download_url': '/subtractions/foo/files/subtraction.1.bt2',
    'id': 1,
    'name': 'subtraction.1.bt2',
    'size': 12,
    'subtraction': 'foo',
    'type': 'bowtie2',
  }
---
# name: test_upload[uvloop-None]
  <class 'dict'> {
    'download_url': '/subtractions/foo/files/subtraction.1.bt2',
    'id': 1,
    'name': 'subtraction.1.bt2',
    'size': 12,
    'subtraction': 'foo',
    'type': 'bowtie2',
  }
---
